--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,16 +34,16 @@
         android:text="@string/play_music" />
 
     <Button
-    android:id="@+id/playMusic2"
+    android:id="@+id/stopMusic"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/play_music2" />
+    android:text="@string/stop_music" />
 
     <Button
         android:id="@+id/toDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stop_music"
+        android:text="@string/toDetail"
         android:layout_marginTop="60dp" />
 
 </LinearLayout>
