--- a/app/src/main/res/layout/activity_test_single_top.xml
+++ b/app/src/main/res/layout/activity_test_single_top.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SettingActivity">
+
     <Button
         android:id="@+id/toSingleTop"
         android:layout_width="wrap_content"
@@ -19,10 +20,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <Button
-        android:id="@+id/logout"
+        android:id="@+id/toMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/logout"
+        android:text="@string/toMain"
         tools:layout_editor_absoluteX="170dp"
         tools:layout_editor_absoluteY="323dp"
         tools:ignore="MissingConstraints"
