--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -21,6 +21,6 @@
         android:id="@+id/nextMusic"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/next_icon"/>
+        android:background="@drawable/stop_icon2"/>
 
 </LinearLayout>
